--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       --highlight:rgb(225, 110, 65);
       --main:white;
     }
-    *:focus {outline:none; box-shadow:var(--highlight) 0 0 .1em .1em}
+    :focus {outline:none; box-shadow:var(--highlight) 0 0 .1em .1em}
+    input[type=range]::-moz-focus-outer { border:0 }
     .hover {box-shadow:var(--highlight) 0 0 .1em .1em}
     bracket {color:saddlebrown}
     string {color:darkgreen}
@@ -27,8 +28,29 @@
     node {display:inline-block; font-family:monospace}
     error {color:red; text-shadow:0 0 .5em var(--background)}
     extracted {display:inline-block}
+    extracted.hover { background-color:var(--background); position:sticky; top:.3em; bottom:.3em; z-index:11 }
 
     scrollHighlight { position:fixed; right:0; box-shadow:var(--highlight) 0 0 .2em .2em }
+
+    waiting {
+      display: block;
+      width: 1.5em;
+      height: 1.5em;
+      margin: .5em;
+      border-radius: 50%;
+      border: .2em solid var(--main);
+      border-color: transparent var(--main) transparent var(--main);
+      animation: waiting-dual-ring 1.2s cubic-bezier(.5,0,0,2.5) infinite, waiting-appears .5s forwards;
+    }
+    @keyframes waiting-dual-ring {
+      0% { transform: rotate(0deg) }
+      100% { transform: rotate(180deg) }
+    }
+    @keyframes waiting-appears {
+      0% { opacity: 0 }
+      100% { opacity: 1 }
+    }
+
 
     .broken {border-left:1px solid mediumblue}
     .broken>* {margin-left:1em; display:table; max-width:calc(100% - 1em)}
@@ -37,23 +59,39 @@
     body>* {display:table; white-space:pre-wrap}
 
     .code {display:block; font-family:monospace}
-    .replInputContainer { display: table; width: 100% }
-    .replInputContainer>:first-child { color: red }
-    .replInputContainer>:nth-child(2) { min-height:1em; width:100%; display:table-cell }
+    .replInputContainer>:first-child { color:red; float:left }
+    .replInputContainer>:last-child[contenteditable] { min-height:1.2em; min-width: 1.2em; width:100%; display:table-cell }
 
     #Working { width:.5em; height:.5em; margin-top:.5em; margin-left:.5em; transition:none; background-color:var(--main); border-radius:50%; display:inline-block }
     #Working.yes { background-color:var(--highlight) }
     button { margin:.5em; padding:.5em; border-radius:.3em; border:none; background-color:#4CAF50; color:var(--main) }
     button:hover { background-color:#5CBF60 }
     button:active { background-color:#3C9F40 }
+
+    table {border-spacing:0}
+    td {padding:0}
+
+    particle {
+      border-radius:50%;
+      width:.1em; height:.1em;
+      box-shadow:0 0 .3em .3em var(--highlight);
+      position:absolute;
+      animation: particle-disappears .5s forwards;
+    }
+    @keyframes particle-disappears {
+      0% { opacity: 0; transform: translate(0px, 0px) }
+      20% { opacity: 1 }
+      100% { opacity: 0; transform: translate(var(--x), var(--y)) }
+    }
   </style>
 </head>
 <body>
   <noscript>This requires JS to run, and a fairly modern browser.</noscript>
-  <div style="position:fixed; left:0; bottom:0"
-    ><span id=Working title="Are we currently running any jobs?"
+  <div style="position:sticky; left:0; bottom:0; z-index:10"
+    ><span id=Working title="Currently running 0 jobs."
     ></span
     ><input id=Lightness type=checkbox title="Use dark theme?"
+    ><input id=CPU type=range min=.01 max=.99 step=.01 value=.99 style="margin:0" title="Debounce the interpreter loop to 99% CPU usage"
     ><script>(Lightness.oninput = () =>document.body.classList.toggle('dark', Lightness.checked, true))()</script></div>
   <script src=self.js></script>
 </body>
