forgot about the renaming

--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
     ><input id=Lightness type=checkbox title="Use dark theme?"
     ><input id=CPU type=range min=.01 max=.99 step=.01 value=.99 style="margin:0" title="Debounce the interpreter loop to 99% CPU usage."
     ><script>(Lightness.oninput = () =>document.body.classList.toggle('dark', Lightness.checked, true))()</script></div>
-  <script src=self2.js async></script>
+  <script src=self.js async></script>
 </body>
